examples/invalid/39_explicit_generic_function_kind.lane
module Examples.Invalid.ExplicitGenericFunctionKind

effect Log {
  log(Int) -> Unit
}

fn[E : Effect] run(action : () -> Unit ! E) -> Unit ! E {
  action()
}

fn logged() -> Unit ! Log {
  Log::log!(1)
}

let value : Unit = run[Int](logged)
